--- a/Familymart/html/index.html
+++ b/Familymart/html/index.html
@@ -27,9 +27,15 @@
             <li><button type="button"><a>Khuyến mãi</a></button></li>
             <li><button type="button"><a>Cửa hàng</a></button></li>
             <li><button type="button"><a>Liên hệ</a></button></li>
-            <li><a href="../html/login.html" type="button" ><i  class='bx bx-user bx-flip-horizontal'  style="font-size: 30px; vertical-align: middle;" ></i></a></li>
+            <li><p id="get"></p></li>
+            <li><a href="../html/login.html" type="button" style="height: 100px; width: 100px;"><i  class='bx bx-user bx-flip-horizontal'  style="font-size: 30px; vertical-align: middle;" >
+         
+            
+            </i></a></li>
             <li><a href="../html/cart.html" type="button" ><i class='bx bx-cart'   style="font-size: 30px; vertical-align: middle;"></i></a></li>
+            <li><a href="../html/index.html" type="button" id="remove"><i class='bx bx-log-out bx-flip-vertical'   style="font-size: 30px; vertical-align: middle;"></i></a></li>
           </ul>
+
         </div>
       </div>
     </header>
